lazy load optimize

--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
             <div class="flip-card-inner">
               <div class="face front">
                 <span class="platz">Platz ${platzLabel}</span>
-                <img src="${a.front}" alt="Cover Platz ${platzLabel}">
+                <img src="${a.front}" alt="Cover Platz ${platzLabel}" loading="lazy" decoding="async">
               </div>
               <div class="face back">
-                <img src="${a.back}" alt="Rückseite Platz ${platzLabel}">
+                <img src="${a.back}" alt="Rückseite Platz ${platzLabel}" loading="lazy" decoding="async">
               </div>
             </div>
           </div>`;
